--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
+html,
+body,
+#root,
+main {
+  height: 100%;
+}
+
+h1 {
+  z-index: 2;
+  padding: 0;
+  margin: 0;
+  font-size: 2em;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+p.wallet {
+  margin: 0;
+  padding: 5px;
+}
+
+p.wallet:first-of-type {
+  font-size: 2em;
+}
+
 .App {
   text-align: center;
+  color: white;
 }
